--- a/src/main.scss
+++ b/src/main.scss
@@ -1,8 +1,34 @@
 // @import '../node_modules/bootstrap/scss/bootstrap';
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;300;700;900&display=swap');
 
 @import '../node_modules/bootstrap/scss/functions';
 
 // 2. Include any default variable overrides here
+// font-family: 'Work Sans', sans-serif;
+
+// COLORES CORPORATIVOS
+$alamano_azul: #042974;
+$alamano_naranja: #e64a23;
+$p-s: 100px;
+
+// MODIFICANDO VARIBLES DEL TEMA
+$body-bg: #f2f2f2;
+$primary: $alamano_naranja;
+$link-decoration: none !important;
+
+// FUENTES
+$font-family-sans-serif: 'Work Sans';
+$font-family-monospace: 'Work Sans';
+$font-weight-lighter: 100;
+$font-weight-light: 100;
+$font-weight-normal: 400;
+$font-weight-bold: 700;
+$font-weight-bolder: 900;
+
+$btn-font-family: $font-family-sans-serif;
+$btn-font-weight: $font-weight-bold;
+
+// BOTONES
 
 @import '../node_modules/bootstrap/scss/variables';
 @import '../node_modules/bootstrap/scss/mixins';
@@ -10,7 +36,7 @@
 @import '../node_modules/bootstrap/scss/root';
 @import '../node_modules/bootstrap/scss/reboot';
 // @import '../node_modules/bootstrap/scss/type';
-// @import '../node_modules/bootstrap/scss/images';
+@import '../node_modules/bootstrap/scss/images';
 @import '../node_modules/bootstrap/scss/containers';
 @import '../node_modules/bootstrap/scss/grid';
 // @import '../node_modules/bootstrap/scss/tables';
@@ -42,20 +68,52 @@
 @import '../node_modules/bootstrap/scss/utilities';
 @import '../node_modules/bootstrap/scss/utilities/api';
 @import '../node_modules/bootstrap/scss/helpers';
-body {
-  background-color: #f5f5f5;
-  .navbar {
-    background-color: #f5f5f5;
-    .logo {
-      width: 60%;
-      height: auto;
+
+// ESTILOS PERSONALES
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: $font-family-sans-serif;
+  font-weight: $font-weight-bold;
+}
+.btn-primary {
+  color: #fff !important;
+}
+
+.navbar {
+  background-color: $body-bg;
+  .logo {
+    width: 60%;
+    height: auto;
+  }
+}
+.portada {
+  margin-top: 68px;
+  padding-top: $p-s;
+  padding-bottom: $p-s;
+  .container {
+    .row {
+      h1 {
+        font-size: 3em;
+        .servicio {
+          color: $alamano_naranja;
+        }
+      }
+      p {
+        font-size: 1.3rem;
+        line-height: 1.7;
+      }
     }
   }
-  .portada {
-    padding-top: 100px;
-    h1 {
-      font-size: 3em;
-      font-weight: bold;
-    }
+}
+.servicios {
+  padding-top: $p-s;
+  padding-bottom: $p-s;
+  img {
+    width: auto;
+    height: 100px;
   }
 }
