--- a/src/main.scss
+++ b/src/main.scss
@@ -139,7 +139,14 @@ h6 {
     z-index: -1;
   }
 }
-.servicios,
+.servicios {
+  padding-top: $p-s;
+  padding-bottom: $p-s;
+  img {
+    width: auto;
+    height: 50px;
+  }
+}
 .como_funciona,
 .que_ofrecemos {
   padding-top: $p-s;
@@ -239,5 +246,35 @@ h6 {
   background-color: #dadada;
   .footer-cr {
     background-color: #c2c2c2;
+  }
+}
+.servi {
+  max-height: 0px;
+  overflow: hidden;
+}
+.abierto {
+  animation-name: abrir;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+.cerrado {
+  animation-name: cerrar;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+@keyframes abrir {
+  from {
+    max-height: 0px;
+  }
+  to {
+    max-height: 1200px;
+  }
+}
+@keyframes cerrar {
+  from {
+    max-height: 500px;
+  }
+  to {
+    max-height: 0px;
   }
 }
