--- a/public/main.css
+++ b/public/main.css
@@ -3175,7 +3175,7 @@ textarea.form-control-lg {
 }
 
 .btn-lg {
-  padding: 0.5rem 1rem;
+  padding: 1rem 2rem;
   font-size: 1.25rem;
   border-radius: 0.3rem;
 }
@@ -9510,6 +9510,7 @@ h6,
 }
 
 .portada {
+  background-color: #dadada;
   margin-top: 68px;
   padding-top: 50px;
   padding-bottom: 50px;
@@ -9525,154 +9526,173 @@ h6,
   line-height: 1.7;
 }
 
-.como_funciona,
-.portada,
-.numeros {
-  background-color: #dadada;
-}
-
-.plataforma {
-  background-image: url("./img/oficina-ip-800x445.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: relative;
-  color: #fff;
-  z-index: 1;
-}
-.plataforma ul li.list-group-item {
-  color: #fff !important;
-  border-color: rgba(255, 255, 255, 0.3) !important;
-}
-.plataforma::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #042974;
-  opacity: 0.9;
-  z-index: -1;
-}
-
-.servicios {
+.servicios,
+.como_funciona {
   padding-top: 50px;
   padding-bottom: 50px;
 }
-.servicios img {
+.servicios img,
+.como_funciona img {
   width: auto;
   height: 50px;
 }
 
-.como_funciona,
-.que_ofrecemos {
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-.como_funciona img,
-.que_ofrecemos img {
-  width: auto;
-  height: 100px;
-}
-
-.plataforma li .svg-inline--fa {
-  width: 18px;
-  height: auto;
-}
-
-.planes .col.card {
-  border: 1px solid rgba(204, 204, 204, 0.3);
-  border-radius: 20px;
-  box-shadow: 0px 0px 10px 0px rgba(204, 204, 204, 0.75);
-  -webkit-box-shadow: 0px 0px 10px 0px rgba(204, 204, 204, 0.75);
-  -moz-box-shadow: 0px 0px 10px 0px rgba(204, 204, 204, 0.75);
-  background-color: #fff;
-}
-.planes .col.card img {
-  width: auto;
-  height: 100px;
-}
-
-.como_funciona .time_line div {
-  font-size: 1em;
-  line-height: 1.75em;
-  border-top: 3px solid;
-  border-image: linear-gradient(to left, #042974 0%, #e64a23 100%);
-  border-image-slice: 1;
-  border-width: 3px;
-  counter-increment: section;
-  position: relative;
-}
-.como_funciona .time_line div:before {
-  content: counter(section);
-  position: absolute;
-  border-radius: 50%;
-  padding: 0px;
-  height: 1.25em;
-  width: 1.25em;
-  background-color: #042974;
-  text-align: center;
-  line-height: 1.25em;
-  color: #fff;
-  font-family: "Work Sans";
-  font-weight: bold;
-  font-size: 2em;
-}
-.como_funciona .time_line div p {
-  margin: 0 !important;
-}
-.como_funciona .time_line div:nth-child(odd) {
-  border-left: 3px solid;
-  padding-left: 0;
-}
-.como_funciona .time_line div:nth-child(odd):before {
-  left: 0%;
-  margin-left: -20px;
-  background-color: #e64a23;
-}
-.como_funciona .time_line div:nth-child(even) {
-  border-right: 3px solid;
-  padding-right: 0;
-}
-.como_funciona .time_line div:nth-child(even):before {
-  right: 0%;
-  margin-right: -20px;
-}
-.como_funciona .time_line div:first-child {
-  border-top: 0;
-  border-top-right-radius: 0;
-  border-top-left-radius: 0;
-}
-.como_funciona .time_line div:last-child {
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
-.footer {
+.como_funciona {
   background-color: #dadada;
 }
-.footer .footer-cr {
-  background-color: #c2c2c2;
+.como_funciona .col {
+  border: 5px solid #dadada;
+  border-radius: 1.5rem;
 }
 
+/**
+.plataforma {
+  background-image: url('./img/oficina-ip-800x445.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  color: $white;
+  z-index: 1;
+  ul li.list-group-item {
+    color: $white !important;
+    border-color: rgba($white, 0.3) !important;
+  }
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: $secondary;
+    opacity: 0.9;
+    z-index: -1;
+  }
+}
+.servicios {
+  padding-top: $p-s;
+  padding-bottom: $p-s;
+  img {
+    width: auto;
+    height: 50px;
+  }
+}
+.como_funciona,
+.que_ofrecemos {
+  padding-top: $p-s;
+  padding-bottom: $p-s;
+  img {
+    width: auto;
+    height: 100px;
+  }
+}
+
+.plataforma {
+  li .svg-inline--fa {
+    width: 18px;
+    height: auto;
+  }
+}
+.planes {
+  .col.card {
+    border: 1px solid rgba(#cccccc, 0.3);
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px 0px rgba(#cccccc, 0.75);
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(#cccccc, 0.75);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(#cccccc, 0.75);
+    background-color: $white; //rgba($primary, 0.2);
+    img {
+      width: auto;
+      height: 100px;
+    }
+  }
+}
+.como_funciona {
+  .time_line {
+    div {
+      font-size: 1em;
+      line-height: 1.75em;
+      border-top: 3px solid;
+      border-image: linear-gradient(to left, $secondary 0%, $primary 100%);
+      border-image-slice: 1;
+      border-width: 3px;
+      counter-increment: section;
+      position: relative;
+
+      //numbers
+      &:before {
+        content: counter(section);
+        position: absolute;
+        border-radius: 50%;
+        padding: 0px;
+        height: 1.25em;
+        width: 1.25em;
+        background-color: $secondary;
+        text-align: center;
+        line-height: 1.25em;
+        color: $white;
+        font-family: $font-family-sans-serif;
+        font-weight: bold;
+        font-size: 2em;
+      }
+      p {
+        margin: 0 !important;
+      }
+    }
+    //odd number borders
+    div:nth-child(odd) {
+      border-left: 3px solid;
+      padding-left: 0;
+
+      &:before {
+        left: 0%;
+        margin-left: -20px;
+        background-color: $primary;
+      }
+    }
+    //even number borders
+    div:nth-child(even) {
+      border-right: 3px solid;
+      padding-right: 0;
+
+      &:before {
+        right: 0%;
+        margin-right: -20px;
+      }
+    }
+    //handle first and last
+    div:first-child {
+      border-top: 0;
+      border-top-right-radius: 0;
+      border-top-left-radius: 0;
+    }
+    div:last-child {
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+  }
+}
+.footer {
+  background-color: #dadada;
+  .footer-cr {
+    background-color: #c2c2c2;
+  }
+}
 .servi {
   max-height: 0px;
   overflow: hidden;
 }
-
 .abierto {
   animation-name: abrir;
   animation-duration: 1s;
   animation-fill-mode: forwards;
 }
-
 .cerrado {
   animation-name: cerrar;
   animation-duration: 1s;
   animation-fill-mode: forwards;
 }
-
 @keyframes abrir {
   from {
     max-height: 0px;
@@ -9689,5 +9709,6 @@ h6,
     max-height: 0px;
   }
 }
+*/
 
 /*# sourceMappingURL=main.css.map */
